recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: reassignment to val
		length=shrink*length;
                      ^